feat: 제휴사 관리 어드민 페이지 초기 구현

--- a/index.html
+++ b/index.html
@@ -1,14 +1,108 @@
-<!doctype html>
-<html lang="en">
+
+<!DOCTYPE html>
+<html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>제휴사 관리</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <div class="container">
+        <aside class="sidebar">
+            <div class="logo">
+                <a href="#">Link+</a>
+            </div>
+            <nav class="menu">
+                <ul>
+                    <li><a href="#">사용중인 서비스</a></li>
+                    <li><a href="#">전체 서비스</a></li>
+                    <li><a href="#" class="active">관리자 메뉴</a></li>
+                    <li><a href="#">사용중인 서비스 관리</a></li>
+                    <li><a href="#">광고성 정보 수신 동의</a></li>
+                </ul>
+            </nav>
+        </aside>
+        <main class="content">
+            <header class="header">
+                <div class="header-left">
+                    <h1 id="page-title">서비스 관리</h1>
+                </div>
+                <div class="header-right">
+                    <div class="user-info">
+                        <span class="user-name">김유저</span>
+                        <img src="https://via.placeholder.com/40" alt="User Avatar">
+                    </div>
+                </div>
+            </header>
+
+            <!-- Service List View -->
+            <section id="service-list-view" class="service-list">
+                <div class="list-header">
+                    <h2 id="affiliate-count"></h2>
+                    <div class="actions">
+                        <button id="send-email-btn" class="btn btn-primary">제휴 제안 메일 발송</button>
+                    </div>
+                </div>
+                <div class="list-table">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th><input type="checkbox" id="select-all"></th>
+                                <th>번호</th>
+                                <th>분류</th>
+                                <th>제휴서비스명</th>
+                                <th>제휴연동사</th>
+                                <th>연동시작일</th>
+                                <th>상태</th>
+                            </tr>
+                        </thead>
+                        <tbody id="service-table-body">
+                            <!-- Service list rows will be injected here by JavaScript -->
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+
+            <!-- Service Detail View -->
+            <section id="service-detail-view" style="display: none;">
+              <form id="detail-form">
+                <div class="detail-group">
+                  <label for="detail-partner">제휴연동사</label>
+                  <input type="text" id="detail-partner" readonly>
+                </div>
+                <div class="detail-group">
+                  <label for="detail-service-name">서비스 명</label>
+                  <input type="text" id="detail-service-name">
+                </div>
+                <div class="detail-group">
+                  <label for="detail-service-description">서비스 설명</label>
+                  <textarea id="detail-service-description" rows="6"></textarea>
+                </div>
+                <div class="detail-group">
+                  <label>서비스 접근 설정</label>
+                  <div class="radio-group">
+                    <input type="radio" id="access-all" name="access" value="all" checked>
+                    <label for="access-all">전사 설정</label>
+                    <input type="radio" id="access-restricted" name="access" value="restricted">
+                    <label for="access-restricted">권한 설정</label>
+                  </div>
+                </div>
+                <div class="detail-actions">
+                  <button type="submit" class="btn btn-primary">저장</button>
+                  <button type="button" class="btn btn-secondary" id="back-to-list-btn">목록으로 이동</button>
+                </div>
+              </form>
+            </section>
+
+        </main>
+    </div>
+
+    <!-- Email Modal -->
+    <div id="email-modal" class="modal">
+        <!-- Modal content is the same as before -->
+    </div>
+
+    <script src="main.js"></script>
 </body>
 </html>
