--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <a href="#">카카오뱅크</a>
+                <a href="#"><img src="https://i.imgur.com/J8z6tQy.png" alt="kakaobank logo" class="logo-img"></a>
             </div>
             <nav class="menu">
                 <ul>
