feat: Update sidebar title and logo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <a href="#"><img src="https://i.imgur.com/J8z6tQy.png" alt="kakaobank logo" class="logo-img"></a>
+                <a href="#"><img src="https://t1.kakaocdn.net/kakaobank/assets/images/web/logo_kakaobank.png" alt="kakaobank logo" class="logo-img"></a>
             </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="#" class="active">관리자 메뉴</a></li>
+                    <li><a href="#" class="active">B2B 사업 제휴사 리스트</a></li>
                 </ul>
             </nav>
         </aside>
