feat: Move 'Send Email' to sidebar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <nav class="menu">
                 <ul>
                     <li><a href="#" class="active">B2B 사업 제휴사 리스트</a></li>
+                    <li><a href="#" id="send-email-btn">제휴 제안 메일 발송</a></li>
                 </ul>
             </nav>
         </aside>
@@ -36,9 +37,6 @@
             <section id="service-list-view" class="service-list">
                 <div class="list-header">
                     <h2 id="affiliate-count"></h2>
-                    <div class="actions">
-                        <button id="send-email-btn" class="btn btn-primary">제휴 제안 메일 발송</button>
-                    </div>
                 </div>
                 <div class="list-table">
                     <table>
