feat: Add row numbers, categories, and header for selection criteria

--- a/index.html
+++ b/index.html
@@ -42,12 +42,17 @@
                     <table>
                         <thead>
                             <tr>
-                                <th>제휴사</th>
+                                <th rowspan="2">NO</th>
+                                <th rowspan="2">분류</th>
+                                <th rowspan="2">제휴사</th>
+                                <th colspan="4">선정 조건</th>
+                                <th rowspan="2">종합 등급</th>
+                            </tr>
+                            <tr>
                                 <th>생활 밀착 (빈도)</th>
                                 <th>공공 신뢰 (가치)</th>
                                 <th>데이터 확보 (이종)</th>
                                 <th>기술 검증 (연동)</th>
-                                <th>종합 등급</th>
                             </tr>
                         </thead>
                         <tbody id="service-table-body">
