Change logo to text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <a href="#"><img src="https://via.placeholder.com/150x40?text=B2B+Partners" alt="B2B Partners logo" class="logo-img"></a>
+                <a href="#">kakaobank</a>
             </div>
             <nav class="menu">
                 <ul>
