--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제휴사 관리</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                <a href="#">kakaobank</a>
+                kakaobank
             </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="#" class="active">B2B 사업 제휴사 리스트</a></li>
-                    <li><a href="#" id="send-email-btn">제휴 제안 메일 발송</a></li>
+                    <li><a href="#" class="active"><span class="material-symbols-outlined">corporate_fare</span>B2B 사업 제휴사</a></li>
                 </ul>
             </nav>
         </aside>
@@ -26,15 +25,18 @@
                     <h1 id="page-title">B2B 사업 제휴사 리스트</h1>
                 </div>
                 <div class="header-right">
+                    <div class="search-bar">
+                        <span class="material-symbols-outlined">search</span>
+                        <input type="text" placeholder="검색어를 입력하세요">
+                    </div>
+                    <button class="btn btn-primary">등록</button>
                     <div class="user-info">
-                        <span class="user-name">김유저</span>
                         <img src="https://via.placeholder.com/40" alt="User Avatar">
                     </div>
                 </div>
             </header>
 
-            <!-- Service List View -->
-            <section id="service-list-view" class="service-list">
+            <section class="service-list">
                 <div class="list-header">
                     <h2 id="affiliate-count"></h2>
                 </div>
@@ -42,17 +44,12 @@
                     <table>
                         <thead>
                             <tr>
-                                <th rowspan="2">NO</th>
-                                <th rowspan="2">분류</th>
-                                <th rowspan="2">제휴사</th>
-                                <th colspan="4">선정 조건</th>
-                                <th rowspan="2">종합 등급</th>
-                            </tr>
-                            <tr>
-                                <th>생활 밀착 (빈도)</th>
-                                <th>공공 신뢰 (가치)</th>
-                                <th>데이터 확보 (이종)</th>
-                                <th>기술 검증 (연동)</th>
+                                <th>No</th>
+                                <th>제휴사</th>
+                                <th>담당자</th>
+                                <th>연락처</th>
+                                <th>상태</th>
+                                <th>관리</th>
                             </tr>
                         </thead>
                         <tbody id="service-table-body">
@@ -61,43 +58,8 @@
                     </table>
                 </div>
             </section>
-
         </main>
     </div>
-
-    <!-- Email Modal -->
-    <div id="email-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn">&times;</span>
-            <h2>제휴 제안 메일 발송</h2>
-            <form id="email-form">
-                <div class="form-group">
-                    <label for="email-recipient">받는이</label>
-                    <input type="email" id="email-recipient" required>
-                </div>
-                <div class="form-group">
-                    <label for="email-sender">보내는이</label>
-                    <input type="email" id="email-sender" value="b2b@kakaobank.com" required>
-                </div>
-                <div class="form-group">
-                    <label for="email-subject">제목</label>
-                    <input type="text" id="email-subject" value="카카오뱅크 B2B 사업 제휴 제안" required>
-                </div>
-                <div class="form-group">
-                    <label for="email-body">내용</label>
-                    <textarea id="email-body" rows="8" required>안녕하세요!
-카카오뱅크 B2B 사업 제휴 제안을 드립니다.
-
-감사합니다.</textarea>
-                </div>
-                <div class="form-actions">
-                    <button type="submit" class="btn btn-primary">발송</button>
-                    <button type="button" id="cancel-btn" class="btn btn-secondary">취소</button>
-                </div>
-            </form>
-        </div>
-    </div>
-
     <script src="main.js"></script>
 </body>
 </html>
