--- a/index.html
+++ b/index.html
@@ -1,59 +1,64 @@
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제휴사 관리</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <aside class="sidebar">
             <div class="logo">
-                kakaobank
+                <a href="#">kakaobank</a>
             </div>
             <nav class="menu">
                 <ul>
-                    <li><a href="#" class="active"><span class="material-symbols-outlined">corporate_fare</span>B2B 사업 제휴사</a></li>
+                    <li><a href="#" class="active">B2B 사업 제휴사 리스트</a></li>
+                    <li><a href="#">제휴 제안 메일 발송</a></li>
                 </ul>
             </nav>
         </aside>
         <main class="content">
             <header class="header">
                 <div class="header-left">
-                    <h1 id="page-title">B2B 사업 제휴사 리스트</h1>
+                    <h1>B2B 사업 제휴사 리스트</h1>
                 </div>
                 <div class="header-right">
                     <div class="search-bar">
-                        <span class="material-symbols-outlined">search</span>
                         <input type="text" placeholder="검색어를 입력하세요">
                     </div>
                     <button class="btn btn-primary">등록</button>
                     <div class="user-info">
+                        <span class="user-name">김유저</span>
                         <img src="https://via.placeholder.com/40" alt="User Avatar">
                     </div>
                 </div>
             </header>
-
             <section class="service-list">
                 <div class="list-header">
-                    <h2 id="affiliate-count"></h2>
+                    <h2 id="affiliate-count">전체 5개</h2>
                 </div>
                 <div class="list-table">
                     <table>
                         <thead>
                             <tr>
-                                <th>No</th>
-                                <th>제휴사</th>
-                                <th>담당자</th>
-                                <th>연락처</th>
-                                <th>상태</th>
-                                <th>관리</th>
+                                <th rowspan="2">NO</th>
+                                <th rowspan="2">분류</th>
+                                <th rowspan="2">제휴사</th>
+                                <th colspan="4">선정 조건</th>
+                                <th rowspan="2">종합 등급</th>
+                            </tr>
+                            <tr>
+                                <th>생활 밀착 (빈도)</th>
+                                <th>공공 신뢰 (가치)</th>
+                                <th>데이터 확보 (이종)</th>
+                                <th>기술 검증 (연동)</th>
                             </tr>
                         </thead>
                         <tbody id="service-table-body">
-                            <!-- Affiliate list rows will be injected here by JavaScript -->
+                            <!-- Rows will be injected by JS -->
                         </tbody>
                     </table>
                 </div>
