feat: 성과 분석 페이지 기능 구현

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>제휴사 관리</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -103,10 +104,138 @@
                         </form>
                     </div>
                 </section>
+                
+                <section id="contract-section" class="page-section hidden">
+                    <div class="contract-info-container">
+                        <h2>계약서 작성안내</h2>
+                        <table class="contract-table">
+                            <tbody>
+                                <tr>
+                                    <th>준비서류</th>
+                                    <td>
+                                        <p><strong>개인사업자</strong> 사업자등록증 사본, 정산계좌 사본, 대표자신분증 사본(주민번호마스킹불가), 외국인등록증 또는 여권사본(대표자가 외국인일 경우)<br><em>*계약서 날인 시 꼭 대표자 인감 날인하셔야 합니다.</em></p>
+                                        <p><strong>법인사업자</strong> 사업자등록증 사본, 정산계좌 사본, 법인인감증명서 사본, 법인등기부등본 사본, 사용인감계 사본(사용인감 날인시)<br>외국인등록증 또는 여권사본(대표자가 외국인일 경우), 실제소유자 확인서류(주주명부, 정관, 사원명부 등)<br><em>*법인인감도장으로 계약서 날인하셔야합니다.</em></p>
+                                        <p><strong>법정대리인</strong> 법정대리인 신분증 사본, 가족관계증명서 사본</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>작성서류</th>
+                                    <td>
+                                        <button class="btn btn-download">서식 다운로드</button>
+                                        <p>카카오페이 이용계약서 1부를 카카오페이로 등기 발송 부탁 드립니다. 계약 사항은 공란으로 비워두시고, 카카오페이 카드사 심사 완료 후 연동 안내 시에 계약 사항 채운 계약서를 함께 공유 드리도록 하겠습니다.</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>접수처</th>
+                                    <td>성남시 분당구 판교역로 152 알파돔타워 12층 카카오페이 계약 담당자 앞 (우: 13529)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                
+                        <h2>계약완료 및 서비스 적용</h2>
+                        <table class="contract-table">
+                            <tbody>
+                                <tr>
+                                    <th>심사기간</th>
+                                    <td>계약서 접수 후 3주 소요</td>
+                                </tr>
+                                <tr>
+                                    <th>심사완료통보</th>
+                                    <td>상점 승인 결과를 카카오페이 어드민 관련 안내를 계약서에 적힌 계약 담당자 이메일로 발송 해 드립니다.</td>
+                                </tr>
+                                <tr>
+                                    <th>상점 관리자 페이지</th>
+                                    <td>계약서에 기재한 어드민 계정으로 권한을 부여 해 드리고 있습니다.<br>내부에서 관리하고 있는 어드민 계정이 있다면 해당 계정으로 기재해 주시기 부탁 드립니다.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </section>
 
-                <!-- Placeholder Pages -->
-                <section id="contract-section" class="page-section hidden"><h2>준비중인 페이지입니다.</h2></section>
-                <section id="dashboard-section" class="page-section hidden"><h2>준비중인 페이지입니다.</h2></section>
+                <section id="dashboard-section" class="page-section hidden">
+                    <div class="dashboard-container">
+                        <div class="dashboard-header">
+                            <h3>계정 주요 지표</h3>
+                            <div class="dashboard-filters">
+                                <select><option>최근 3개월</option></select>
+                                <select><option>배너</option></select>
+                            </div>
+                        </div>
+                        <div class="dashboard-main">
+                            <div class="chart-container">
+                                <canvas id="performance-chart"></canvas>
+                            </div>
+                            <div class="contract-status-container">
+                                <div class="contract-status-header">
+                                    <h4>계약 관리 | 검토중 0건</h4>
+                                    <a href="#">전체보기 &gt;</a>
+                                </div>
+                                <div class="contract-status-body">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>캠페인명</th>
+                                                <th>검토 요청일</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <!-- Data rows would go here -->
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="campaign-list-container">
+                            <div class="campaign-list-header">
+                                <h3>캠페인 목록</h3>
+                                <div class="date-picker">
+                                    <span>최근 6개월 | 2025.08.08 ~ 2026.02.03</span>
+                                    <input type="date" style="display:none;">
+                                </div>
+                            </div>
+                            <table class="campaign-table">
+                                <thead>
+                                    <tr>
+                                        <th>캠페인명</th>
+                                        <th>상태</th>
+                                        <th>캠페인 기간</th>
+                                        <th>계약 금액</th>
+                                        <th>총비용</th>
+                                        <th>과금방식/달성률</th>
+                                        <th>노출수</th>
+                                        <th>클릭수</th>
+                                        <th>CTR</th>
+                                        <th>CPM</th>
+                                        <th>CPC</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><a href="#">토스_광고보고현금받기_115_1111</a></td>
+                                        <td><span class="status-chip">집행완료</span></td>
+                                        <td>2025-11-05 ~ 2025-11-11</td>
+                                        <td>-</td>
+                                        <td>16,501,220</td>
+                                        <td>CPC: 0%</td>
+                                        <td>3,841,114</td>
+                                        <td>1,650,122</td>
+                                        <td>42.96%</td>
+                                        <td>4,295</td>
+                                        <td>10</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <div class="pagination">
+                               <button>&laquo;</button>
+                               <button>&lt;</button>
+                               <button class="active">1</button>
+                               <button>&gt;</button>
+                               <button>&raquo;</button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </div>
         </main>
     </div>
