Update user name

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                     </div>
                     <button class="btn btn-primary">등록</button>
                     <div class="user-info">
-                        <span class="user-name">김유저</span>
-                        <img src="https://via.placeholder.com/40" alt="User Avatar">
+                        <span class="user-name">roger.f</span>
                     </div>
                 </div>
             </header>
