--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <button class="btn btn-primary">등록</button>
                     <div class="user-info">
-                        <span class="user-name">roger.f</span>
+                        <span class="user-name">사용자: roger.f</span>
                     </div>
                 </div>
             </header>
